# pycones2014-kata-c

./: CMakeLists.txt  THOUGHTS.md  export.db  gitrecording.sh  lib.c  lib.cpp  lib.h  main.c
tests/: CMakeLists.txt  test.c
